--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,16 @@ button.btn.btn-primary {
   text-align: center;
   align-items: center;
 }
-.form-control{
+.form-control { 
   text-align: center;
+}
+.container {
+  display: flex;
+  align-content: stretch;
+  align-items: baseline;
+  justify-content: space-around;
+  max-width: 750px;
+}
+.row {
+  display: unset;
 }
